--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,5 +1,6 @@
 
 @import 'index.scss';
+@import 'variables.scss';
 
 body, html{
   margin: 0 !important;
@@ -14,4 +15,41 @@ body, html{
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 150px;
+
+  @media screen and (max-width: 767px){
+    padding-top: 80px;
+  }
+
+  .login-box{
+    max-width: 450px;
+    padding: 30px;
+    background: #FFF;
+    border-radius: 10px;
+    box-shadow: 0 16px 20px -18px rgba(48, 45, 45, 0.5);
+
+    @media screen and (max-width: 767px){
+      max-width: 350px;
+    }
+
+    .login-form{
+      margin-top: 15px;
+      margin-bottom: 15px;
+      .form-group{
+        margin-bottom: 0px;
+      }
+      .login-btn{
+        background: $brand;
+        color: #FFF;
+        width: 100%;
+        height: 50px;
+        border: 0;
+        transition: 0.3s;
+        &:hover{
+          background: #FFF;
+          border: 1px solid $brand;
+          color: $brand;
+        }
+      }
+    }
+  }
 }
