--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,4 +4,6 @@ $brand: #fc0000;
 $gray-label: #81848e;
 $gray-icon: #585f6a;
 $gray-dark: #4f4f4f;
+$gray-light: #AFAFAF;
+$gray-lighter: #DFDFDF;
 $red: #FC4848;
