Implemented store API, paging not implemented yet. Store card finished

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -11,7 +11,7 @@ body, html{
 .login-container{
   min-height: 100vh;
   max-height: 100vh;
-  background: url('/img/login-bg.jpeg');
+  background: url('/img/login-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 150px;
