--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -3,7 +3,7 @@
 .main-container{
   .jumbotron{
     padding: 7rem 2rem;
-    background: url('/img/home.jpeg');
+    background: url('/img/home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 0;
@@ -18,6 +18,42 @@
     }
     @media screen and (max-width: 767px){
       background-position: 100% 0;
+    }
+  }
+
+  .product-show{
+    margin-left: 30px;
+    margin-right: 30px;
+    .product-title{
+      margin-top: 50px;
+      margin-bottom: 50px;
+      font-size: 32px;
+      color: $gray-dark;
+      text-align: center;
+    }
+    .store-col{
+      @media screen and (min-width: 576px){
+        flex: 0 0 50%;
+        max-width: 50%;
+      }
+      @media screen and (min-width: 768px){ //col-md
+        flex: 0 0 50%;
+        max-width: 50%;
+      }
+      @media screen and (min-width: 992px){ //col-lg
+        flex: 0 0 20%;
+        max-width: 20%;
+      }
+    }
+    .store-rating{
+      .star-ratings{
+        .star-container{
+          svg{
+            width: 20px !important;
+            height: 20px !important;
+          }
+        }
+      }
     }
   }
 }
