Store details page with API implemented. Not yet for signup

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,6 +69,11 @@
         color: $gray-label;
         font-weight: 400;
       }
+      .dropdown-menu{
+        a{
+          color: $gray-label;
+        }
+      }
       .close-nav-item{
         cursor: pointer;
         @media screen and (min-width: 768px) {
