--- a/src/styles/store.scss
+++ b/src/styles/store.scss
@@ -49,6 +49,21 @@
         }
       }
     }
-   
+    .suggested-stores{
+      .card-title{
+        font-size: 16px;
+        margin-bottom: 0;
+      }
+      .store-rating{
+        .star-ratings{
+          .star-container{
+            svg{
+              width: 15px !important;
+              height: 15px !important;
+            }
+          }
+        }
+      }
+    }
   }
 }
