--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -21,10 +21,10 @@
     }
   }
 
-  .product-show{
+  .store-show{
     margin-left: 30px;
     margin-right: 30px;
-    .product-title{
+    .store-title{
       margin-top: 50px;
       margin-bottom: 50px;
       font-size: 32px;
@@ -45,5 +45,8 @@
         max-width: 20%;
       }
     }
+  }
+  .store-pagination{
+    padding-bottom: 50px;
   }
 }
