--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -24,6 +24,14 @@
   .store-show{
     margin-left: 30px;
     margin-right: 30px;
+    .filter{
+      margin-bottom: 20px;
+      .form-control{
+        max-width: 200px;
+        width: 200px;
+        display: inline-block;
+      }
+    }
     .store-title{
       margin-top: 50px;
       margin-bottom: 50px;
